--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "react-router-dom": "^4.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "react-burger-menu": "^2.3.0",
+    "react-responsive-carousel": "^3.1.33",
+    "react-slick": "^0.20.0"
   }
 }
