--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "react-burger-menu": "^2.3.0",
     "react-responsive-carousel": "^3.1.33",
+    "react-router": "^4.2.0",
     "react-slick": "^0.20.0"
   }
 }
